--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
 <form>
-Name: <input name="user">
+username: <input name="un"> <br>
+password: <input name="pw" type="password"> <br>
+<input type="submit"> 
 </form>
