--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<form>
+<form method="POST">
 username: <input name="un"> <br>
 password: <input name="pw" type="password"> <br>
 <input type="submit"> 
