login v4 text file

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,5 @@
 username: <input name="un"> <br>
 password: <input name="pw" type="password"> <br>
 <input type="submit"> 
+<a href="/signup">signup</a>
 </form>
