--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,7 @@
 <form method="POST">
-username: <input name="un"> <br>
-password: <input name="pw" type="password"> <br>
-confirm password: <input name="cpw" type="password"> <br>
+un: <input name="un"> <br>
+pw: <input name="pw" type="password"> <br>
+confirm pw: <input name="cpw" type="password"> <br>
 <input type="submit">
 <a href="/">login</a>
 </form>
