--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <form method="POST">
-username: <input name="un"> <br>
-password: <input name="pw" type="password"> <br>
+un: <input name="un"> <br>
+pw: <input name="pw" type="pw"> <br>
 <input type="submit"> 
 <a href="/signup">signup</a>
 </form>
